--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,10 +14,10 @@
         android:theme="@style/Theme.TesNewsapi"
         tools:targetApi="31">
         <activity
-            android:name=".SourceActivity."
+            android:name=".view.SourceActivity"
             android:exported="false" />
         <activity
-            android:name=".CategoryActivity"
+            android:name=".view.CategoryActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
