--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
         dataBinding true
         viewBinding true
     }
+    android {
+        lint {
+            lintConfig file("lint.xml")
+        }
+    }
 }
 
 dependencies {
